GNOME Bugzilla – Bug 752875
wayland: Fix initial fullscreen monitor support
Last modified: 2015-07-26 05:57:40 UTC
-1 means that we have no specific preference for an initial fullscreen monitor, and -1 is less than the number of monitors, so we would end up accessing invalid memory. Prevent that.
Created attachment 308161 [details] [review] wayland: Fix initial fullscreen monitor support
Review of attachment 308161 [details] [review]: of course
Attachment 308161 [details] pushed as 83b7a0f - wayland: Fix initial fullscreen monitor support